# cogl-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage.yaml  coverage.yml  tests.yml
src/: debug_object_type_info.rs  depth_state.rs  fence.rs  fence_closure.rs  gles2_vtable.rs  gtype_object.rs  handle.rs  kms_crtc.rs  lib.rs  material.rs  material_layer.rs  poll_fd.rs  rt.rs  texture_vertex.rs  user_data_key.rs
src/auto/: alias.rs  atlas_texture.rs  attribute.rs  attribute_buffer.rs  bitmap.rs  color.rs  context.rs  display.rs  enums.rs  euler.rs  fixed.rs  flags.rs  frame_closure.rs  frame_info.rs  framebuffer.rs  gles2_context.rs  index_buffer.rs  indices.rs  matrix.rs  matrix_entry.rs  matrix_stack.rs  mod.rs  object.rs  offscreen.rs  onscreen.rs  onscreen_dirty_closure.rs  onscreen_resize_closure.rs  onscreen_template.rs  output.rs  pipeline.rs  pixel_buffer.rs  primitive.rs  quaternion.rs  renderer.rs  snippet.rs  sub_texture.rs  swap_chain.rs  texture.rs  texture2_d.rs  texture2_dsliced.rs  (+4 more)
sys/: CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md
sys/src/: lib.rs  manual.rs
sys/tests/: abi.rs
tests/: check_event.rs
