[package]
name = "cogl-rs"
version = "0.1.2"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
readme = "README.md"
homepage = "https://angular-rust.github.io/cogl-rs"
repository = "https://github.com/angular-rust/cogl-rs"
documentation = "https://docs.rs/cogl-rs"
description = "Rust bindings for the Cogl library"
keywords = ["cogl", "gtk", "gtk-rs", "gnome", "gui"]
categories = ["multimedia", "gui"]
license = "MPL-2.0"
edition = "2018"

[lib]
name = "cogl"

[package.metadata.docs.rs]
features = ["dox"]

[features]
dox = ["ffi/dox", "glib/dox", "glib-sys/dox", "gobject-sys/dox"]

[dependencies]
libc = "0.2"
bitflags = "1.0"
gobject-sys = "0.10"
glib = "0.10"
glib-sys = "0.10"

ffi = { package = "cogl-sys-rs", version="0.1", path = "sys" }

[dev-dependencies]
gir-format-check = "^0.1"
