[package]
name = "cogl-sys-rs"
version = "0.1.1"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
readme = "README.md"
homepage = "https://angular-rust.github.io/cogl-rs"
repository = "https://github.com/angular-rust/cogl-rs"
documentation = "https://docs.rs/cogl-sys-rs"
description = "FFI bindings to Cogl library"
keywords = ["cogl", "gtk", "gtk-rs", "gnome", "gui"]
categories = ["multimedia", "gui"]
license = "MPL-2.0"
edition = "2018"
links = "\"cogl\""
build = "build.rs"
[package.metadata.system-deps.cogl_2_0_experimental]
name = "cogl-2.0-experimental"
version = "2.0"

[package.metadata.system-deps.cogl_2_0_experimental.feature-versions]
[package.metadata.docs.rs]
features = ["dox"]

[features]
dox = []

[lib]
name = "cogl_sys"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
version = "0.10"

[dependencies.gobject-sys]
version = "0.10"

[build-dependencies]
system-deps = "1.3"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"
